ontol/ontol-compiler/test-cases/error/union/non_disjoint_text_union.on
def u1(
    rel .is?: 'a'
    rel .is?: 'a' // ERROR duplicate anonymous relationship
)
